attempt to complete

--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practice 08.09</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Practice 08.09</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <nav>
+      <ul class="nav-list">
+        <li class="list-item"><a href="#" class="link">Home</a></li>
+        <li class="list-item">
+          <a href="#" class="link">Categories</a>
+          <ul class="sub-nav-list">
+            <li class="sub-list-item list-item">
+              <a href="#" class="link">Men</a>
+            </li>
+            <li class="sub-list-item list-item">
+              <a href="#" class="link">Women</a>
+              <ul class="sub-nav-list">
+                <li class="sub-list-item list-item">
+                  <a href="#" class="link">Dress</a>
+                </li>
+                <li class="sub-list-item list-item">
+                  <a href="#" class="link">Pants</a>
+                </li>
+                <li class="sub-list-item list-item">
+                  <a href="#" class="link">Shoes</a>
+                </li>
+              </ul>
+            </li>
+            <li class="sub-list-item list-item">
+              <a href="#" class="link">Kids</a>
+            </li>
+          </ul>
+        </li>
+        <li class="list-item"><a href="#" class="link">About</a></li>
+        <li class="list-item"><a href="#" class="link">Contacts</a></li>
+      </ul>
+    </nav>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ipsa et,
+      sapiente dolorem minus dolores ratione veniam asperiores deleniti impedit,
+      laboriosam deserunt voluptas itaque? Excepturi, ipsum asperiores
+      aspernatur exercitationem esse quos delectus! Maxime, rerum. Repudiandae
+      iste consequatur sit ullam harum? Illum incidunt porro enim rem eveniet.
+      Dolore dolorem itaque deleniti, repellat perspiciatis cum ut laudantium
+      ipsa rem labore deserunt, unde quibusdam quae officiis dicta odit sit est
+      soluta eaque fuga neque eligendi eos expedita recusandae? Reiciendis
+      dolorum cum sequi nam fugit quia, rem doloremque assumenda, vitae incidunt
+      asperiores dolore quaerat! Nisi sint commodi suscipit ipsa numquam officia
+      impedit mollitia pariatur. Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Optio accusantium rerum molestiae eaque laudantium
+      adipisci, ullam reprehenderit, commodi hic voluptates voluptas doloribus
+      numquam doloremque placeat dolore a deserunt qui illo error in. Ea eveniet
+      quis cupiditate, quaerat porro eos ratione. Tempora, quo rerum! Quidem
+      maxime quis perspiciatis, voluptates rem a?
+    </p>
+  </body>
 </html>
